# claw-city

./: .clinerules  .dockerignore  .env.example  .flake8  .gitignore  .pre-commit-config.yaml  LICENSE  README.md  clawcity.py  clawcity_cli_legacy  coverage.xml  gallery.html  justfile  pyproject.toml  pytest.ini  requirements.txt  test_location.py
.github/workflows/: build-binaries.yml  ci-binary.yml  ci-build.yml  ci-lint.yml  ci-tests.yml  ci-typecheck.yml  ci.yml  publish-to-pypi.yml
assets/characters/berthold/: backstory.md  profile.md  visual_traits.md
assets/characters/buergermeister_bruno/: backstory.md  profile.md  visual_traits.md
assets/characters/doktor_klara/: backstory.md  profile.md  visual_traits.md
assets/characters/eric/: backstory.md  profile.md  visual_traits.md
assets/characters/fitness_fiona/: backstory.md  profile.md  visual_traits.md
assets/characters/gina/: backstory.md  profile.md  visual_traits.md
assets/characters/hacker_hannes/: backstory.md  (+2 more)
assets/world/: global_context.md
clawcity/: __init__.py  __main__.py
clawcity/cli/: main.py
clawcity/core/: config.py  exceptions.py  models.py
clawcity/pipeline/: engine.py  prompt_builder.py
clawcity/services/: audio.py  images.py  video.py
configs/: characters.yaml  pipeline_settings.yaml
data/characters/: berthold.yaml  buergermeister_bruno.yaml  doktor_klara.yaml  eric.yaml  fitness_fiona.yaml  gina.yaml  hacker_hannes.yaml  heinrich.yaml  kuenstler_kurt.yaml  max.yaml  oma_gerda.yaml  pfarrer_paul.yaml  professor_herbert.yaml  sabrina.yaml  tina.yaml  torsten.yaml  werner.yaml
data/config/: visual_style.yaml
data/locations/: bar.yaml  baumarkt_bauwelt.yaml  baumarkt_kasse.yaml  baumarkt_schraubenabteilung.yaml  cafe_gemuetlich.yaml  cafegemuetlich.yaml  default.yaml  fitnessstudio.yaml  friseursalon.yaml  garten_mrs_schmidt.yaml  gemeindezentrum.yaml  ginas_kueche.yaml  ginas_wohnung.yaml  maxs_werkstatt.yaml  maxswerkstatt.yaml  oma_gerdas_keller.yaml  sabrina_baeckerei.yaml  unbekannt.yaml  werners_wohnung.yaml  werners_wohnzimmer.yaml  zu_hause.yaml
docker/: Dockerfile  entrypoint.sh
docs/: PIPELINE.md  git-workflow.md  opening_sequence.md  production_bible.md
episodes/: README.md
examples/: episode_script_minimal.yaml
scripts/: ep01.yaml  ep01_v2.yaml  ep01_v3.yaml  ep02_v3.yaml  ep03_v3.yaml  ep04_v3.yaml
src/: prompt_builder.py
src/clawcity/: __init__.py  __main__.py
tests/: conftest.py
tests/unit/: test_config.py  test_models.py  test_prompt_builder.py
(+47 files in other folders)
